--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,19 @@
 
 /* Global */
 
-body {
-  width: 1200px;
+.page-body {
+  min-width: 1240px;
   margin: 0;
-  padding: 0;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'PT Sans', sans-serif, 'Arial', sans-serif;
   font-size: 14px;
   line-height: 21px;
   color: var(--middle-dark);
   text-transform: uppercase;
   background-color: var(--lightest-gray);
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -44,26 +47,52 @@ img {
   height: auto;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
-  overflow: hidden;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
+  overflow: hidden;
 }
+
+.page {
+  height: 100%;
+}
+
+.page-wrap {
+  background: var(--white);
+  box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 /* Main navigation */
 
-.page-header {
-  background: var(--white);
-}
-
 .site-navigation {
   list-style: none;
+  margin: 0;
   font-weight: bold;
   line-height: 26px;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 15px 72px;
+}
+
+li.align-left {
+  text-align: left;
+}
+
+li.align-right {
+  text-align: right;
 }
 
 .site-navigation a {
@@ -80,15 +109,23 @@ img {
   opacity: 0.3;
 }
 
-.site-navigation a:focus {
+a.current {
   color: var(--light-brown);
 }
 
-/*Promo*/
-
-.page-content {
-  background: var(--white);
+.page-header {
+  position: relative;
 }
+
+.logo {
+  display: inline-flex;
+  position: absolute;
+  top: 0;
+  left: 531px;
+  z-index: 1;
+}
+
+/*Promo*/
 
 .promo-images {
   position: relative;
@@ -99,7 +136,6 @@ img {
   width: 456.65px;
   height: 350.88px;
   background-image: url("../img/intro-welcome.svg");
-  background-repeat: no-repeat;
   position: absolute;
   top: 77.35px;
   left: 371.38px;
@@ -110,23 +146,32 @@ img {
   width: 1200px;
   height: 57px;
   background-image: url("../img/intro-mask.svg");
-  background-repeat: no-repeat;
   position: absolute;
   bottom: 6px;
   left: 0;
 }
 
-.promo p {
+.promo-content {
+  padding: 42.5px 340px 51px;
   text-align: center;
+}
+
+.promo p {
+  margin: 0;
   line-height: 26px;
 }
 
-.promo-content {
+p.promo-text:first-child {
   font-weight: bold;
   font-size: 21px;
+  margin-bottom: 16.5px;
 }
 
 /*Reasons*/
+
+.image-wrap img {
+  display: block;
+}
 
 .reasons-list {
   display: flex;
@@ -138,66 +183,81 @@ img {
 .main-reason {
   display: flex;
   flex-wrap: wrap;
+  background: var(--light-blue);
+  color: var(--white);
 }
 
 .reason-info {
+  box-sizing: border-box;
   width: 400px;
-  height: 256px;
-  background: var(--light-blue);
-  color: var(--white);
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 47px 49px;
+}
+
+.reason-info h3 {
+  margin: 0;
+}
+
+.reason-number {
+  margin-top: 25px;
+  margin-bottom: 23px;
 }
 
 .advantages-list {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
+  background: var(--white);
+  color: var(--middle-dark);
 }
 
 .advantages-item {
+  box-sizing: border-box;
+  width: 400px;
   text-align: center;
+  padding: 160px 50px 73px;
+  position: relative;
+}
+
+.advantages-icon::before {
+  content: "";
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .accommodation::before {
-  content: "";
   width: 75px;
   height: 72px;
   background-image: url("../img/icon-1.svg");
-  background-position: center center;
-  position: absolute;
 }
 
 .meals::before {
-  content: "";
   width: 75px;
-  height: 72px;
+  height: 70px;
   background-image: url("../img/icon-3.svg");
-  background-position: center center;
-  position: absolute;
 }
 
 .souvenirs::before {
-  content: "";
-  width: 75px;
-  height: 72px;
+  width: 64px;
+  height: 77px;
   background-image: url("../img/icon-2.svg");
-  background-position: center center;
-  position: absolute;
 }
 
 .reverse {
   flex-direction: row-reverse;
 }
 
-.fixed-width {
+.background-gray {
   width: 400px;
   background: var(--light-gray);
   color: var(--black);
+  padding-left: 75px;
+  padding-right: 75px;
 }
 
 /*Hotels search*/
@@ -207,6 +267,11 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.hotels-search button {
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .hotels-search-content {
@@ -229,6 +294,7 @@ button.hotels-search {
   line-height: 26px;
   text-transform: uppercase;
   font-weight: bold;
+  border: none;
 }
 
 button.hotels-search:hover {
@@ -242,7 +308,7 @@ button.hotels-search:focus {
 }
 
 button.search {
-  width: 458px;
+  width: 100%;
   height: 58px;
   background: var(--light-blue);
   color: var(--white);
@@ -250,6 +316,8 @@ button.search {
   line-height: 26px;
   text-transform: uppercase;
   font-weight: bold;
+  margin-top: 54px;
+  border: none;
 }
 
 button.search:hover {
@@ -263,16 +331,12 @@ button.search:focus {
 }
 
 .hotels-search-form {
+  box-sizing: border-box;
   width: 568px;
-  height: 395px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.search-inputs p {
-  margin: 0;
+  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+  padding: 55px;
+  position: relative;
+  background: var(--white);
 }
 
 .hotels-search-form label {
@@ -282,52 +346,162 @@ button.search:focus {
 }
 
 .hotels-search-form input {
+  box-sizing: border-box;
   height: 38px;
+  font-family: inherit;
   background: var(--lightest-gray);
   font-size: 14px;
   line-height: 26px;
   font-weight: bold;
   color: var(--black);
-  text-transform: uppercase;
   border: none;
+  padding: 6px 13px;
 }
 
-.search-inputs {
+.dates {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  margin: 0 0 30px;
+  position: relative;
 }
 
-.calendar {
-  margin-bottom: 30px;
-  width: 346px;
-  background-image: url("../img/calendar.svg");
-  background-position: center center;
-  background-repeat: no-repeat;
+.visitors-counter {
+  display: flex;
+  justify-content: space-between;
 }
 
 .visitors {
+  margin: 0;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  width: 50%;
+  align-items: center;
+}
+
+.children {
+  margin-left: 53px;
+}
+
+.visitors-input {
   width: 114px;
   text-align: center;
 }
 
-.adults{
-  margin-right: 53px;
+.date-input {
+  width: 346px;
+  text-transform: uppercase;
+}
+
+.calendar {
+  width: 21px;
+  height: 23px;
+  border: none;
+  background: transparent no-repeat;
+  position: absolute;
+  top: 7px;
+  right: 8px;
+  padding: 0;
+}
+
+button .calendar:last-child {
+  top: 20px;
+}
+
+.calendar-icon:hover {
+  fill: var(--black)
+}
+
+.calendar-icon:active, .calendar-icon:focus {
+  fill: var(--light-blue)
+}
+
+.minus {
+  width: 12px;
+  height: 12px;
+  border: none;
+  padding: 0;
+  position: absolute;
+  background: transparent;
+  top: 12px;
+  left: 130px;
+}
+
+.minus::after {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 3px;
+  background: var(--dark-gray);
+}
+
+.plus {
+  width: 12px;
+  height: 12px;
+  border: none;
+  padding: 0;
+  position: absolute;
+  background: transparent;
+  top: 14px;
+  right: 14px;
+}
+
+.plus::before {
+  content: "";
+  display: block;
+  background: var(--dark-gray);
+  width: 12px;
+  height: 3px;
+}
+
+.plus::after {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 3px;
+  transform: translateY(-85%) rotate(90deg);
+  background: var(--dark-gray);
+}
+
+.minus:hover::after,
+.plus:hover::before,
+.plus:hover::after {
+  background: var(--black);
+}
+
+.minus:focus:after,
+.plus:focus:before,
+.plus:focus::after,
+.minus:active:after,
+.plus:active:before,
+.plus:active::after {
+  background: var(--light-blue);
+}
+
+.map {
+  display: block;
+  margin-top: -395px;
+  margin-bottom: -120px;
 }
 
 /*Footer*/
 
 .page-footer {
   background: rgba(255, 255, 255, 0.9);
-  display: flex;
-  justify-content: space-around;
-  margin-top: 23px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+  height: 120px;
+  position: relative;
 }
 
 .contacts {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  text-align: center;
 }
 
 .contacts a {
@@ -354,25 +528,56 @@ button.search:focus {
   padding: 0;
 }
 
-.socials-item a {
+.socials-item a{
   width: 46px;
   height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
   background: var(--light-blue);
+}
+
+.socials-item:not(:last-child) {
   margin-right: 6px;
+}
+
+.twitter::before {
+  content: "";
+  width: 17px;
+  height: 17px;
+  background-image: url("../img/twitter.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.facebook::before {
+  content: "";
+  width: 12px;
+  height: 22px;
+  background-image: url("../img/fb-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.youtube::before {
+  content: "";
+  width: 20px;
+  height: 16px;
+  background-image: url("../img/youtube.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .socials-item a:hover {
   background: var(--blue);
 }
 
-.socials-item a:focus, .socials-item a:active {
+.socials-item a:focus,
+.socials-item a:active {
   background: var(--dark-blue);
 }
 
-.social-icon:focus, .social-icon:active {
+.socials-item a:active::before {
   mix-blend-mode: normal;
   opacity: 0.3;
 }
@@ -390,11 +595,13 @@ button.search:focus {
   margin-left: 8px;
 }
 
-.copyright a:hover, .html-logo:hover {
+.html-logo:hover path,
+.html-logo:focus path {
   fill: var(--light-blue);
 }
 
-.html-logo:focus, .html-logo:active {
+
+.html-logo:active path {
   fill: var(--dark);
   mix-blend-mode: normal;
   opacity: 0.3;
@@ -408,25 +615,68 @@ button.search:focus {
   background-position: 0 0;
   background-repeat: no-repeat;
   color: var(--white);
+  padding: 26px 73px 31px 85px;
 }
 
 .left-col-filters fieldset {
   border: none;
-  margin-top: 26px;
+  margin: 0;
+  padding: 0;
 }
 
+.left-col-filters fieldset:nth-child(1) {
+  margin-right: 119px;
+}
+
+
 .left-col-filters legend {
+  padding: 0;
+  margin: 0 0 0 -39px;
   font-size: 16px;
   font-weight: bold;
 }
 
 .filers-list {
-  padding: 0;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.filers-item {
+.filer-option {
   margin-top: 25px;
+}
+
+.filer-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: -39px;
+  top: 0;
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  left: -39px;
+  top: 0;
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+}
+
+.filter-input-checkbox:disabled path {
+  fill: var(--dark-gray);
 }
 
 .hotels-filter-form {
@@ -436,19 +686,11 @@ button.search:focus {
 
 .left-col-filters {
   display: flex;
-  flex-direction: row;
-  margin-left: 72px;
 }
 
-.right-col-filters {
-  margin-right: 72px;
-  margin-bottom: 32px;
-  margin-top: 26px;
-}
-
-.right-col-filters label {
-  font-size: 16px;
-  font-weight: bold;
+.right-col-filters p {
+  margin: 0;
+  text-align: center;
 }
 
 button.show {
@@ -462,6 +704,104 @@ button.show {
   line-height: 21px;
   color: var(--white);
   text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 40px;
+}
+
+.right-col-filters fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.right-col-filters legend {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  text-transform: uppercase;
+  margin: 0 0 10px;
+  padding: 0;
+}
+
+.price-controls {
+  width: 317px;
+  height: 36px;
+  box-sizing: border-box;
+  border: 2px solid var(--white);
+  padding-top: 6.5px;
+  padding-bottom: 8.5px;
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+}
+
+.max-price:before {
+  content: "";
+  width: 2px;
+  height: 22px;
+  background: var(--white);
+  margin-right: 37px;
+  position: absolute;
+  right: 156px;
+}
+
+.price-controls label {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.price-controls input {
+  font-family: inherit;
+  font-size: inherit;
+  background: transparent;
+  border: none;
+  color: var(--white);
+  width: 30px;
+}
+
+.range-filter {
+  width: 317px;
+}
+
+.range-controls {
+  margin-top: 20px;
+  position: relative;
+}
+
+.range-controls .scale {
+  height: 2px;
+  width: 316px;
+  background: var(--white);
+  opacity: 0.3;
+}
+
+.range-controls .bar {
+  width: 248px;
+  height: 2px;
+  background: var(--white);
+  opacity: 1;
+}
+
+.range-controls .toggle {
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  border: 7.64px solid #ffffff;
+  background-color: #ababab;
+  border-radius: 50%;
+  position: absolute;
+  top: -9px;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 0;
+}
+
+.range-controls .toggle-max {
+  left: 248px;
 }
 
 /*Sort hotels*/
@@ -471,8 +811,8 @@ button.show {
 }
 
 .sort-hotels {
-  border-bottom: 2px solid var(--hotels-border-gray);
-  padding: 0 72px;
+  border-bottom: 1px solid var(--hotels-border-gray);
+  padding: 29px 72px 31px 72px;
   display: flex;
   align-items: center;
 }
@@ -482,19 +822,27 @@ button.show {
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+}
+
+.found-title {
+  margin: 0;
   font-size: 21px;
   line-height: 26px;
-  margin-right: 47px;
 }
 
 .param-sorting-title {
-  margin-right: 40px;
+  margin: 0 40px 0 46px;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
 }
 
 .param-sorting-list, .ranking-list {
   list-style: none;
   display: flex;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .sorting-form {
@@ -506,12 +854,18 @@ button.param {
   font-size: 12px;
   line-height: 18px;
   text-transform: uppercase;
+  font-family: inherit;
+  background: transparent;
   color: var(--black);
   mix-blend-mode: normal;
   opacity: 0.3;
-  margin-right: 32px;
   padding: 0;
   border-bottom: 1px dashed var(--light-blue);
+  cursor: pointer;
+}
+
+.param-sorting-list li:not(:last-child) {
+  margin-right: 32px;
 }
 
 button.param:hover {
@@ -530,6 +884,8 @@ button.param:focus {
   height: 10px;
   fill: var(--middle-gray);
   padding: 0;
+  cursor: pointer;
+  background: transparent;
 }
 
 .ranking-list li:first-child {
@@ -559,17 +915,18 @@ button.param:focus {
 .hotels-item {
   list-style: none;
   display: flex;
-  border-bottom: 2px solid var(--hotels-border-gray);
-  margin: 0 72px;
+  border-bottom: 1px solid var(--hotels-border-gray);
+  padding: 30px 72px;
   align-items: center;
   justify-content: flex-start;
 }
 
 .hotels-item img {
-  margin: 30px 30px 30px 0;
+  display: block;
 }
 
 .hotel-info {
+  margin-left: 30px;
   margin-right: auto;
   display: flex;
   flex-direction: column;
@@ -598,9 +955,19 @@ button.param:focus {
   color: var(--white);
   text-align: center;
   font-weight: bold;
-  line-height: 21px;
+  line-height: 27px;
   margin-right: 6px;
   margin-top: 15.5px;
+}
+
+.more-info:hover {
+  background: var(--blue);
+}
+
+.more-info:active {
+  background: var(--dark-blue);
+  mix-blend-mode: normal;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .book {
@@ -614,20 +981,51 @@ button.param:focus {
   color: var(--white);
   text-transform: uppercase;
   margin-top: 15.5px;
+  cursor: pointer;
+  font-family: inherit;
+  padding: 3px 17px;
+}
+
+.book:hover {
+  background: var(--brown);
+}
+
+.book:active {
+  background: var(--dark-brown);
+  mix-blend-mode: normal;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-rating {
+  width: 110px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 .star-rating {
-  width: 110px;
   height: 17px;
   background-image: url("../img/star.svg");
   background-position: center center;
-  background-repeat: no-repeat;
+  background-repeat: space repeat;
   margin-bottom: 50px;
+}
+
+.four-stars {
+  width: 76px
+}
+
+.three-stars {
+  width: 57px;
+}
+
+.two-stars {
+  width: 38px;
 }
 
 .numeric-rating {
   background: var(--lightest-gray);
   color: var(--dark);
   text-align: center;
-  padding: 3px 0;
+  padding: 3px 12px 3px 15px;
 }
