--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,17 @@
   --middle-dark: #333333;
   --black: #000000;
 
-  --lightest-gray: #f2f2f2;
-  --light-gray: #eeeeee;
+  --lightest-gray: #F2F2F2;
+  --light-gray: #EEEEEE;
   --middle-gray: #CACACA;
   --dark-gray: #A9A9A9;
   --hotels-border-gray: #E5E5E5;
+  --input-background-gray: #EBEBEB;
 
   --light-blue: #81B3D2;
   --blue: #669EC0;
   --dark-blue: #5496BD;
+  --google-focus-blue: #065ea1;
 
   --light-brown: #766357;
   --brown: #604E43;
@@ -62,10 +64,6 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-.page {
-  height: 100%;
-}
-
 .page-wrap {
   background: var(--white);
   box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
@@ -99,18 +97,19 @@ li.align-right {
   color: var(--black);
 }
 
-.site-navigation a:hover {
+.site-navigation a:not(.current):hover,
+.site-navigation a:not(.current):focus {
   color: var(--light-blue);
 }
 
-.site-navigation a:active {
+.site-navigation a:not(.current):active {
   color: var(--black);
-  mix-blend-mode: normal;
   opacity: 0.3;
 }
 
 a.current {
   color: var(--light-brown);
+  cursor: auto;
 }
 
 .page-header {
@@ -131,14 +130,18 @@ a.current {
   position: relative;
 }
 
+.promo-images img {
+  display: block;
+}
+
 .promo-images::before {
   content: "";
-  width: 456.65px;
-  height: 350.88px;
+  width: 458px;
+  height: 352px;
   background-image: url("../img/intro-welcome.svg");
   position: absolute;
-  top: 77.35px;
-  left: 371.38px;
+  top: 77px;
+  left: 371px;
 }
 
 .promo-images::after {
@@ -147,12 +150,12 @@ a.current {
   height: 57px;
   background-image: url("../img/intro-mask.svg");
   position: absolute;
-  bottom: 6px;
+  bottom: -1px;
   left: 0;
 }
 
 .promo-content {
-  padding: 42.5px 340px 51px;
+  padding: 42px 340px 52px;
   text-align: center;
 }
 
@@ -164,13 +167,14 @@ a.current {
 p.promo-text:first-child {
   font-weight: bold;
   font-size: 21px;
-  margin-bottom: 16.5px;
+  margin-bottom: 43px;
 }
 
 /*Reasons*/
 
 .image-wrap img {
   display: block;
+  width: 800px;
 }
 
 .reasons-list {
@@ -178,6 +182,7 @@ p.promo-text:first-child {
   list-style: none;
   flex-wrap: wrap;
   padding: 0;
+  margin: 0;
 }
 
 .main-reason {
@@ -191,10 +196,20 @@ p.promo-text:first-child {
   box-sizing: border-box;
   width: 400px;
   text-align: center;
-  padding: 47px 49px;
+  padding-top: 49px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
-.reason-info h3 {
+.reasons-item-title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 21px;
+}
+
+p.reasons-text-content {
+  padding: 0;
   margin: 0;
 }
 
@@ -213,11 +228,22 @@ p.promo-text:first-child {
   color: var(--middle-dark);
 }
 
+.advantages-title {
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 21px;
+  margin: 0 0 25px;
+}
+
+.advantages-text {
+  margin: 0;
+}
+
 .advantages-item {
   box-sizing: border-box;
   width: 400px;
   text-align: center;
-  padding: 160px 50px 73px;
+  padding: 160px 50px 82px;
   position: relative;
 }
 
@@ -244,7 +270,7 @@ p.promo-text:first-child {
 
 .souvenirs::before {
   width: 64px;
-  height: 77px;
+  height: 76px;
   background-image: url("../img/icon-2.svg");
 }
 
@@ -256,17 +282,21 @@ p.promo-text:first-child {
   width: 400px;
   background: var(--light-gray);
   color: var(--black);
-  padding-left: 75px;
-  padding-right: 75px;
+  padding-left: 69px;
+  padding-right: 69px;
+  padding-bottom: 54px;
 }
 
 /*Hotels search*/
 
-.hotels-search {
+.hotels-search-section {
+  padding-top: 58px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  position: relative;
 }
 
 .hotels-search button {
@@ -274,15 +304,18 @@ p.promo-text:first-child {
   font-family: inherit;
 }
 
-.hotels-search-content {
-  text-align: center;
-  width: 435px;
+.hotels-search-text {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  margin: 0;
+  line-height: 24px;
 }
 
 .hotels-search-title {
   font-weight: bold;
   font-size: 30px;
   line-height: 24px;
+  margin: 0;
 }
 
 button.hotels-search {
@@ -295,6 +328,7 @@ button.hotels-search {
   text-transform: uppercase;
   font-weight: bold;
   border: none;
+  font-family: inherit;
 }
 
 button.hotels-search:hover {
@@ -335,8 +369,9 @@ button.search:focus {
   width: 568px;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
   padding: 55px;
-  position: relative;
   background: var(--white);
+  position: absolute;
+  top: 291px;
 }
 
 .hotels-search-form label {
@@ -366,37 +401,22 @@ button.search:focus {
   position: relative;
 }
 
-.visitors-counter {
-  display: flex;
-  justify-content: space-between;
-}
-
-.visitors {
-  margin: 0;
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  width: 50%;
-  align-items: center;
-}
-
-.children {
-  margin-left: 53px;
-}
-
-.visitors-input {
-  width: 114px;
-  text-align: center;
-}
-
 .date-input {
   width: 346px;
   text-transform: uppercase;
 }
 
+.date-input:hover {
+  background: var(--input-background-gray);
+}
+
+.date-input:focus {
+  background: var(--white);
+}
+
 .calendar {
-  width: 21px;
-  height: 23px;
+  width: 25px;
+  height: 25px;
   border: none;
   background: transparent no-repeat;
   position: absolute;
@@ -409,23 +429,57 @@ button .calendar:last-child {
   top: 20px;
 }
 
-.calendar-icon:hover {
-  fill: var(--black)
+.calendar:hover > svg,
+.calendar:focus > svg {
+  fill: var(--black);
 }
 
-.calendar-icon:active, .calendar-icon:focus {
+.calendar:active > svg {
   fill: var(--light-blue)
 }
 
+.visitors-counter {
+  display: flex;
+  justify-content: space-between;
+}
+
+.visitors {
+  margin: 0;
+  display: flex;
+  width: 50%;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.visitors label {
+  margin-right: auto;
+}
+
+.children {
+  margin-left: 53px;
+}
+
+.visitors-input {
+  width: 38px;
+  text-align: center;
+}
+
+.visitors input {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.operator {
+  width: 38px;
+  height: 38px;
+  background: var(--lightest-gray);
+  margin: 0;
+  padding: 0;
+}
+
 .minus {
-  width: 12px;
-  height: 12px;
   border: none;
   padding: 0;
-  position: absolute;
-  background: transparent;
-  top: 12px;
-  left: 130px;
 }
 
 .minus::after {
@@ -434,17 +488,14 @@ button .calendar:last-child {
   width: 12px;
   height: 3px;
   background: var(--dark-gray);
+  margin: auto;
 }
 
 .plus {
-  width: 12px;
-  height: 12px;
   border: none;
   padding: 0;
-  position: absolute;
-  background: transparent;
-  top: 14px;
-  right: 14px;
+  top: 0;
+  right: 0;
 }
 
 .plus::before {
@@ -453,6 +504,7 @@ button .calendar:last-child {
   background: var(--dark-gray);
   width: 12px;
   height: 3px;
+  margin: auto;
 }
 
 .plus::after {
@@ -462,6 +514,7 @@ button .calendar:last-child {
   height: 3px;
   transform: translateY(-85%) rotate(90deg);
   background: var(--dark-gray);
+  margin: auto;
 }
 
 .minus:hover::after,
@@ -480,9 +533,9 @@ button .calendar:last-child {
 }
 
 .map {
+  border: none;
   display: block;
-  margin-top: -395px;
-  margin-bottom: -120px;
+  margin-bottom: -127px;
 }
 
 /*Footer*/
@@ -495,6 +548,8 @@ button .calendar:last-child {
   align-items: center;
   height: 120px;
   position: relative;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .contacts {
@@ -502,6 +557,7 @@ button .calendar:last-child {
   font-size: 21px;
   line-height: 26px;
   text-align: center;
+
 }
 
 .contacts a {
@@ -513,6 +569,7 @@ button .calendar:last-child {
 }
 
 .contacts a:focus {
+  color: var(--black);
   mix-blend-mode: normal;
   opacity: 0.3;
 }
@@ -615,7 +672,7 @@ button .calendar:last-child {
   background-position: 0 0;
   background-repeat: no-repeat;
   color: var(--white);
-  padding: 26px 73px 31px 85px;
+  padding: 26px 73px 32px 73px;
 }
 
 .left-col-filters fieldset {
@@ -631,7 +688,7 @@ button .calendar:last-child {
 
 .left-col-filters legend {
   padding: 0;
-  margin: 0 0 0 -39px;
+  margin: 0;
   font-size: 16px;
   font-weight: bold;
 }
@@ -651,12 +708,13 @@ button .calendar:last-child {
   display: block;
   cursor: pointer;
   user-select: none;
+  padding-left: 39px;
 }
 
 .filter-input-checkbox + label::before {
   content: "";
   position: absolute;
-  left: -39px;
+  left: 0;
   top: 0;
   width: 23px;
   height: 23px;
@@ -667,7 +725,7 @@ button .calendar:last-child {
 .filter-input-checkbox:checked + label::after {
   content: "";
   position: absolute;
-  left: -39px;
+  left: 0;
   top: 0;
   width: 27px;
   height: 23px;
@@ -675,8 +733,27 @@ button .calendar:last-child {
   background-repeat: no-repeat;
 }
 
-.filter-input-checkbox:disabled path {
-  fill: var(--dark-gray);
+.filter-input-checkbox:checked + label::before {
+  display: none;
+}
+
+.filter-input-checkbox:focus + label::after,
+.filter-input-checkbox:focus + label::before {
+  box-shadow: 0 0 1px 3px var(--google-focus-blue);
+}
+
+/*.hotels-filter-form input[type=checkbox]:disabled + label:before{*/
+/*  opacity: 0.3;*/
+/*  cursor: auto;*/
+/*}*/
+.filter-input-checkbox:disabled + label::after,
+.filter-input-checkbox:disabled + label::before {
+  opacity: 0.3;
+  cursor: auto;
+}
+
+.filter-input-checkbox:disabled + label {
+  cursor: auto;
 }
 
 .hotels-filter-form {
@@ -705,7 +782,14 @@ button.show {
   color: var(--white);
   text-transform: uppercase;
   cursor: pointer;
-  margin-top: 40px;
+  margin-top: 34px;
+  font-family: inherit;
+}
+
+button.show:hover,
+button.show:focus {
+  background: var(--white);
+  color: var(--black);
 }
 
 .right-col-filters fieldset {
@@ -731,8 +815,11 @@ button.show {
   padding-top: 6.5px;
   padding-bottom: 8.5px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: relative;
+  padding-left: 65px;
+  padding-right: 20px;
+  align-items: center;
 }
 
 .max-price:before {
@@ -740,7 +827,6 @@ button.show {
   width: 2px;
   height: 22px;
   background: var(--white);
-  margin-right: 37px;
   position: absolute;
   right: 156px;
 }
@@ -757,7 +843,7 @@ button.show {
   background: transparent;
   border: none;
   color: var(--white);
-  width: 30px;
+  width: 60px;
 }
 
 .range-filter {
@@ -772,15 +858,13 @@ button.show {
 .range-controls .scale {
   height: 2px;
   width: 316px;
-  background: var(--white);
-  opacity: 0.3;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .range-controls .bar {
   width: 248px;
   height: 2px;
   background: var(--white);
-  opacity: 1;
 }
 
 .range-controls .toggle {
@@ -812,22 +896,20 @@ button.show {
 
 .sort-hotels {
   border-bottom: 1px solid var(--hotels-border-gray);
-  padding: 29px 72px 31px 72px;
+  padding: 29px 70px 30px 73px;
   display: flex;
-  align-items: center;
 }
 
 .found-hotels {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  font-weight: bold;
 }
 
 .found-title {
   margin: 0;
   font-size: 21px;
   line-height: 26px;
+  font-weight: bold;
 }
 
 .param-sorting-title {
@@ -840,7 +922,6 @@ button.show {
 .param-sorting-list, .ranking-list {
   list-style: none;
   display: flex;
-  align-items: center;
   margin: 0;
   padding: 0;
 }
@@ -875,13 +956,21 @@ button.param:hover {
 
 button.param:focus {
   color: var(--black);
-  border: none;
+  border-bottom: 1px dashed transparent;
 }
+
+.param.active {
+  opacity: 1;
+  color: var(--light-blue);
+  border-bottom: 1px dashed transparent;
+  cursor: auto;
+}
+
 
 .ranking {
   border: none;
-  width: 11px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   fill: var(--middle-gray);
   padding: 0;
   cursor: pointer;
@@ -889,19 +978,29 @@ button.param:focus {
 }
 
 .ranking-list li:first-child {
-  margin-right: 12px;
+  margin-right: 0;
 }
 
-.arrow {
-  fill: var(--middle-gray)
+.ranking-list {
+  padding-top: 5px;
 }
 
-.arrow:hover {
+.ranking:hover > svg,
+.ranking:focus > svg{
   fill: var(--black);
 }
 
-.arrow:active, .arrow:focus {
+.ranking:active > svg {
   fill: var(--light-blue);
+}
+
+.ranking.active > svg {
+  fill: var(--light-blue);
+  cursor: auto;
+}
+
+.param.active {
+
 }
 
 /*Hotels search results*/
@@ -916,8 +1015,8 @@ button.param:focus {
   list-style: none;
   display: flex;
   border-bottom: 1px solid var(--hotels-border-gray);
-  padding: 30px 72px;
-  align-items: center;
+  padding: 24px 73px;
+  align-items: flex-end;
   justify-content: flex-start;
 }
 
@@ -941,6 +1040,20 @@ button.param:focus {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+}
+
+.hotel-name {
+  color: var(--black);
+}
+
+.hotel-name:hover,
+.hotel-name:focus {
+  color: var(--light-blue);
+}
+
+.hotel-name:active {
+  color: var(--black);
+  opacity: 0.3;
 }
 
 .left-column, .right-column {
@@ -1005,6 +1118,7 @@ button.param:focus {
 
 .star-rating {
   height: 17px;
+  width: 19px;
   background-image: url("../img/star.svg");
   background-position: center center;
   background-repeat: space repeat;
